[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "molpipeline"
authors = [
    {name = "Christian W. Feldmann"},
    {name = "Jennifer Hemmerich"},
    {name = "Jochen Sieg"}
]
description = "Integration of rdkit functionality into sklearn pipelines."
readme = "README.md"
dependencies = [
    "joblib>=1.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "rdkit>=2023.9.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.2",
    "shap>=0.47.1",
    "typing-extensions>=4.13.1",
]

[project.optional-dependencies]
chemprop = [
    "chemprop>=2.0.3,<=2.0.4",
    "lightning>=2.5.1",
]
notebooks = [
    "jupyterlab>=4.4.0",
    "seaborn>=0.13.2",
]

[tool.bandit]
exclude_dirs = [".venv"]

[tool.ruff.lint]
preview = true
select =  [
    "A",     # flake8-buildins
    "ANN",   # flake8-annotations
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "DOC",   # pydoclint
    "E",     # pycodestyle - errors
    "ERA",   # eradicate
    "F",     # pyflakes
    "FA",    # flake8-funny-annotations
    "FIX",   # flake8-fixme
    "FLY",   # flake8-flynt
    "FURB",  # refurb
    "I",     # isort
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "N",     # pep8-naming
    "NPY",   # numpy-specific rules
    "PD",    # pandas-vet
    "PERF",  # perflint
    "PGH",   # pygrep-hook
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # ruff specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "TC",    # flake8-type-checking
    "TD",    # flake8-todo
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle - warnings
]
ignore = [
    "ANN401",  #  Allow  typing.Any
    "ANN204",  #  Missing return type annotation for special method
    "COM812", # Trailing comma missing # TO REMOVE
    "D203", # 1 blank line required before class docstring
    "D213", # blank-line-before-class-docstring
    "D413", # missing-blank-line-after-last-section # TO REMOVE
    "E501", # line-too-long # TO REMOVE
    "ERA001",  # Found commented-out code  # TO REMOVE
    "PLR0913", # too-many-arguments
    "PGH003",  # Blanket type ignore for types
    "PLC2701", # Private name import  # TO REMOVE
    "PLW2901", # Redefined loop variable
    "RET504",  # Unnecessary assignment  # TO REMOVE
    "RUF100", #  Unused noqa  # TO REMOVE
    "S311",  #  suspicious-non-cryptographic-random-usage
    "SIM114",  # Combine `if` branches  # TO REMOVE
    "SLF001",  # Private member accessed  # TO REMOVE
]
 [tool.ruff.lint.per-file-ignores]
 "*.ipynb" = [
     "PLE1142",
     "F704",
     "T201"
 ]
 "test_*" = [
     "S101",
     "S404",
     "S603",
     "S607"
 ]

[tool.ruff.lint.pylint]
max-positional-args = 10

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.setuptools.dynamic]
version = {attr = "molpipeline.__version__"}


[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.setuptools.package-data]
"molpipeline" = ["py.typed"]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black[jupyter]>=25.1.0",
    "coverage>=7.8.0",
    "docsig>=0.69.3",
    "flake8>=7.2.0",
    "interrogate>=1.7.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.6",
    "pyright>=1.1.399",
    "rdkit-stubs>=0.8",
    "ruff>=0.11.4",
]
